--- a/portfolio.html
+++ b/portfolio.html
@@ -195,7 +195,6 @@
     <div class="footer-info">
       <a class="logo-link footer-logo" href="/"><span class="logo-start">Web</span>Studio</a>
       <address class="footer-address">m.Warszawa, Aleje Jerozolimskie 21</address>
-
       <address class="footer-address-contact">
         <a class="link" href="mailto:info@example.com">info@example.com</a>
       </address>
@@ -232,8 +231,23 @@
         </div>
       </div>
     </div>
+    <div class="footer-newsletter">
+      <form>
+        <label>
+          <span class="footer-social-title footer-newsletter-label">ZAPISZ SIĘ DO NEWSLETTERA</span>
+          <input class="email-newsletter" type="text" name="email" placeholder="E-mail" />
+        </label>
+        <button class="footer-button" type="submit">Zapisz się
+          <svg class="footer-image">
+            <use href="images/icons.svg#samolociszek">
+            </use>
+          </svg>
+        </button>
+      </form>
+    </div>
   </div>
 </footer>
+
 </body>
 
 </html>
