--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <button class="order-button" data-modal-open type="button">Zamów usługę</button>
     </div>
   </section>
+
   <section>
     <div class="container section-padding-top">
       <ul class="flexbox-spaces">
@@ -260,6 +261,7 @@ non sodales dui. Interdum et malesuada</span>
       </ul>
     </div>
   </section>
+
   <section>
     <div class="container section-padding-top section-padding-bottom">
       <h2>Nasi klienci</h2>
@@ -304,12 +306,12 @@ non sodales dui. Interdum et malesuada</span>
     </div>
   </section>
 </main>
+
 <footer class="background">
   <div class="footer container">
     <div class="footer-info">
       <a class="logo-link footer-logo" href="/"><span class="logo-start">Web</span>Studio</a>
       <address class="footer-address">m.Warszawa, Aleje Jerozolimskie 21</address>
-
       <address class="footer-address-contact">
         <a class="link" href="mailto:info@example.com">info@example.com</a>
       </address>
@@ -346,13 +348,65 @@ non sodales dui. Interdum et malesuada</span>
         </div>
       </div>
     </div>
+    <div class="footer-newsletter">
+      <form>
+        <label>
+          <span class="footer-social-title footer-newsletter-label">ZAPISZ SIĘ DO NEWSLETTERA</span>
+          <input class="email-newsletter" type="text" name="email" placeholder="E-mail" />
+        </label>
+        <button class="footer-button" type="submit">Zapisz się
+          <svg class="footer-image">
+            <use href="images/icons.svg#samolociszek">
+            </use>
+          </svg>
+        </button>
+      </form>
+    </div>
   </div>
 </footer>
+
 <div class="backdrop is-hidden" data-modal>
   <div class="modal">
     <button class="close-btn" data-modal-close type="button">X</button>
+    <div>
+      <h3 class="form-header">Zostaw swoje dane w formularzu poniżej</h3>
+    </div>
+    <form class="contact-form" name="contact" autocomplete="on">
+      <div>
+        <label for="form-name">
+          <span class="form-data">Imię</span>
+        </label>
+        <input id="form-name" class="contact-window" type="text" name="name" />
+        <svg class="form-image">
+          <use href="images/icons.svg#ludzik">
+          </use>
+        </svg>
+      </div>
+      <label>
+        <span class="form-data">Telefon</span>
+        <input class="contact-window" type="tel" name="phone" />
+        <svg class="form-image">
+          <use href="images/icons.svg#telefonik">
+          </use>
+        </svg>
+      </label>
+      <label>
+        <span class="form-data">Email</span>
+        <input class="contact-window" type="email" name="email" />
+        <svg class="form-image">
+          <use href="images/icons.svg#kopertuszka">
+          </use>
+        </svg>
+      </label>
+      <label>
+        <span class="form-data">Komentarz</span>
+        <textarea class="contact-window" name="comment" placeholder="Wprowadź tekst"></textarea>
+      </label>
+      <button type="submit">Wyślij</button>
+    </form>
   </div>
 </div>
 <script src="./js/modal.js"></script>
+
 </body>
 </html>
